# apairo_visu

./: .gitignore  README.md  conftest.py  pyproject.toml
apairo_visu/: __init__.py  __main__.py  colors.py  config.py  geometry.py  pipeline.py  poses.py  sync.py  viewer.py
apairo_visu/configs/: goose.yaml  rellis.yaml  semantic_kitti.yaml
docs/: examples.md  getting_started.md  label_configs.md  sync.md  viewer.md
examples/: view_dataset copy.py  view_dataset.py  view_pipelines.py  view_rellis.py  view_rellis_traversability.py  view_tartandrive.py
test/: test_colors.py  test_config.py  test_geometry.py  test_pipeline.py  test_poses.py
